[package]
name = "rust"
version = "0.1.0"
authors = ["Chanakya <chanakya.valluri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
tokio = { version = "1", features = ["full"] }